# tree-sitter-whistle

./: .gitignore  Cargo.toml  LICENSE  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  SETUP_COMPLETE.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
examples/: basic.w2
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: operators.txt  patterns.txt  plugins.txt
