[package]
name = "tree-sitter-whistle"
description = "Whistle grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "whistle"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/avwo/whistle"
edition = "2021"
license = "MIT"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
